@@ -2,7 +2,8 @@
 
   * src/new_window.c: Use gtk_combo_box_get_active_text instead 
     of gtk_entry_get_text
-  * data/gwget.ui: Redone the menuitems. Remove unused dialog3.
+  * data/gwget.ui: Redone the menuitems. Remove unused dialog3. 
+    Redone the popup menu.
   * src/main_window.c: Load correct file
   * data/preferences.ui: Update with glade-3
   
